// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input.svelte > should render input for type "color" 1`] = `
<input
  type="color"
/>
`;

exports[`Input.svelte > should render input for type "color" as required 1`] = `
<input
  readonly="true"
  type="color"
/>
`;

exports[`Input.svelte > should render input for type "date" 1`] = `
<input
  type="date"
/>
`;

exports[`Input.svelte > should render input for type "date" as required 1`] = `
<input
  readonly="true"
  type="date"
/>
`;

exports[`Input.svelte > should render input for type "datetime" 1`] = `
<input
  type="datetime-local"
/>
`;

exports[`Input.svelte > should render input for type "datetime" as required 1`] = `
<input
  readonly="true"
  type="datetime-local"
/>
`;

exports[`Input.svelte > should render input for type "email" 1`] = `
<input
  type="email"
/>
`;

exports[`Input.svelte > should render input for type "email" as required 1`] = `
<input
  readonly="true"
  type="email"
/>
`;

exports[`Input.svelte > should render input for type "file" 1`] = `
<input
  type="file"
/>
`;

exports[`Input.svelte > should render input for type "file" as required 1`] = `
<input
  readonly="true"
  type="file"
/>
`;

exports[`Input.svelte > should render input for type "integer" 1`] = `
<input
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "integer" as required 1`] = `
<input
  readonly="true"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "month" 1`] = `
<input
  type="month"
/>
`;

exports[`Input.svelte > should render input for type "month" as required 1`] = `
<input
  readonly="true"
  type="month"
/>
`;

exports[`Input.svelte > should render input for type "number" 1`] = `
<input
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "number" as required 1`] = `
<input
  readonly="true"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "number" with custom props 1`] = `
<input
  max="10"
  min="3"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "password" 1`] = `
<input
  type="password"
/>
`;

exports[`Input.svelte > should render input for type "password" as required 1`] = `
<input
  readonly="true"
  type="password"
/>
`;

exports[`Input.svelte > should render input for type "range" 1`] = `
<input
  type="range"
/>
`;

exports[`Input.svelte > should render input for type "range" as required 1`] = `
<input
  readonly="true"
  type="range"
/>
`;

exports[`Input.svelte > should render input for type "rating" with custom props 1`] = `
<error>
  Type "
  rating
  " is not supported by Input
</error>
`;

exports[`Input.svelte > should render input for type "string" 1`] = `
<input
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "string" as required 1`] = `
<input
  readonly="true"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "tel" 1`] = `
<input
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "tel" as required 1`] = `
<input
  readonly="true"
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "text" 1`] = `
<input
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "text" as required 1`] = `
<input
  readonly="true"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "text" with custom props 1`] = `
<input
  maxlength="10"
  minlength="3"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "textarea" 1`] = `
<textarea
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "textarea" as required 1`] = `
<textarea
  readonly="true"
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "time" 1`] = `
<input
  type="time"
/>
`;

exports[`Input.svelte > should render input for type "time" as required 1`] = `
<input
  readonly="true"
  type="time"
/>
`;

exports[`Input.svelte > should render input for type "url" 1`] = `
<input
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "url" as required 1`] = `
<input
  readonly="true"
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "week" 1`] = `
<input
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "week" as required 1`] = `
<input
  readonly="true"
  type="week"
/>
`;
